Corrected Tablet Sizing Issue/Conflict with Small/Mobile device sizing in media queries and added overflow:auto to paragraphs to prevent text from interfering with longer text inputs in the section. Changed color themes to differentiate between them better. Moved ALL CSS to stylesheet and cleaned up index.html.

--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -14,6 +14,7 @@ h1 {
 p {
 	padding: 10px;
 	margin: 0;
+  overflow: auto;
 }
 
 .container {
@@ -29,11 +30,11 @@ section {
 	border:	1px solid black;
 	background-color: #fffdd0;
 	width: 100%;
-	height: 200px;
+	height: 10em;
 	font-family: Helvetica;
 	color: black;
 	position: relative;
-	overflow: auto;
+
 }
 
 #Chicken {
@@ -47,7 +48,7 @@ section {
 	margin-bottom: 0;
 	margin-top: 0;
 	padding: 5px;
-	background-color: #FFFF00;
+	background-color: #EADDCA;
 }
 
 #Beef {
@@ -61,7 +62,7 @@ section {
 	margin-bottom: 0;
 	margin-top: 0;
 	padding: 5px;
-	background-color: #FF1439;
+	background-color: #9F2B68;
 }
 
 #Pork {
@@ -74,7 +75,7 @@ section {
 	font-size: 125%;
 	margin-bottom: 0;
 	margin-top: 0;
-	background-color: #6495ED;
+	background-color: #008080;
 	color: white;
 	padding: 5px;
 }
@@ -176,7 +177,7 @@ section {
 
 /* Small Devices */
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
  	float: left;
   }
